<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/word"
                android:layout_margin="@dimen/margin_m"/>

            <EditText
                android:id="@+id/et_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:layout_margin="@dimen/margin_m"/>

            <EditText
                android:id="@+id/et_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example"
                android:layout_margin="@dimen/margin_m"/>

            <EditText
                android:id="@+id/et_example_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_hint"
                android:layout_margin="@dimen/margin_m"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>